# icali

./: .gitignore  README.md  pyproject.toml
examples/: example.csv  example2.csv
icali/: __init__.py  csv_reader.py  read_input.py
tests/: test_icali.py
